tests/spec/non_conformant/errors/import/file/mixin/simple/inside.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/import/file/mixin/simple/inside.hrx"

// Ignoring "test", error tests are not supported yet.
